fixed spacing for rows and icons

--- a/client/css/style.scss
+++ b/client/css/style.scss
@@ -66,7 +66,7 @@ form {
 
 img.main-image {
     width: 60%;
-    margin: 20px auto;
+    margin: auto 20%;
     border-radius: 5px;
     box-shadow: 0 8px 6px -6px #999;
 }
@@ -74,6 +74,7 @@ img.main-image {
 img.main-icon {
     width: 50%;
     margin: 20px auto;
+    display: block;
 }
 
 main {
@@ -248,7 +249,6 @@ div {
 
 /** SNIPPET FORM ***/
 
-
 .empty-snippets-h1 {
     margin-top: 20%;
 }
@@ -304,16 +304,15 @@ div {
     .snippet-button {
         cursor: pointer;
         opacity: 0.5;
-       img {
-        width: 40px;
-        margin: 10px;
-       }
-       &:hover {
+        img {
+            width: 40px;
+            margin: 10px;
+        }
+        &:hover {
             opacity: 1;
             transition: 0.4s;
         }
     }
-    
 }
 
 nav {
@@ -326,8 +325,6 @@ nav {
     background-color: $lBlack;
 }
 
-
-
 .main-nav {
     background-color: $lBlack;
     ul {
@@ -337,11 +334,9 @@ nav {
         padding: 0;
         overflow: hidden;
     }
-
     li {
         float: right;
     }
-
     li a {
         display: block;
         color: white;
@@ -349,7 +344,6 @@ nav {
         padding: 14px 16px;
         text-decoration: none;
     }
-
     /* Change the link color to #111 (black) on hover */
     li a:hover {
         background-color: $teal;
@@ -359,11 +353,11 @@ nav {
 .nav-transparent {
     background-color: $lGray;
     box-shadow: 0 7px 5px -9px $lBlack;
-   ul {
-    li a {
-        color: $lBlack;
+    ul {
+        li a {
+            color: $lBlack;
+        }
     }
-   }
 }
 
 div .bottom-main-nav {
@@ -380,7 +374,7 @@ div .bottom-main-nav {
     }
 }
 
-.nav-brand{
+.nav-brand {
     color: $teal !important;
     float: left !important;
     display: block;
@@ -388,7 +382,7 @@ div .bottom-main-nav {
     padding: 14px 16px;
 }
 
-.parallax { 
+.parallax {
     /* The image used */
     background-image: url("https://github.com/riceball1/simple-code/blob/master/public/code-image.jpg?raw=truecode-image.jpg");
     filter: grayscale(100%);
@@ -406,8 +400,8 @@ div .bottom-main-nav {
 
 .other-parallax {
     margin-top: 30px;
-    height:300px;
-    background-color:white;
+    height: 300px;
+    background-color: white;
 }
 
 div.main-slogan {
@@ -428,7 +422,6 @@ div.main-slogan {
     color: $teal;
     width: 80%;
     margin: 60px auto;
-
 }
 
 .scrolled-nav {
@@ -439,6 +432,7 @@ div.main-slogan {
     color: black;
     font-size: 1.5em;
     margin-top: 10%;
+    width: 50%;
 }
 
 div.menu-btn {
@@ -460,78 +454,81 @@ div.menu-btn {
 
 .grey-row {
     border-bottom: 1px dotted #999;
+    width: 80%;
 }
+
 
 /** sidebar menu **/
 
+
 /* Icon 1 adapted from https://codepen.io/designcouch/pen/Atyop */
 
-#nav-icon1{
-  width: 50px;
-  height: 40px;
-  position: relative;
-  margin: 5px auto;
-  -webkit-transform: rotate(0deg);
-  -moz-transform: rotate(0deg);
-  -o-transform: rotate(0deg);
-  transform: rotate(0deg);
-  -webkit-transition: .5s ease-in-out;
-  -moz-transition: .5s ease-in-out;
-  -o-transition: .5s ease-in-out;
-  transition: .5s ease-in-out;
-  cursor: pointer;
+#nav-icon1 {
+    width: 50px;
+    height: 40px;
+    position: relative;
+    margin: 5px auto;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: .5s ease-in-out;
+    -moz-transition: .5s ease-in-out;
+    -o-transition: .5s ease-in-out;
+    transition: .5s ease-in-out;
+    cursor: pointer;
 }
 
-#nav-icon1 span{
-  display: block;
-  position: absolute;
-  height: 9px;
-  width: 100%;
-  background: $teal;
-  border-radius: 9px;
-  opacity: 1;
-  left: 0;
-  -webkit-transform: rotate(0deg);
-  -moz-transform: rotate(0deg);
-  -o-transform: rotate(0deg);
-  transform: rotate(0deg);
-  -webkit-transition: .25s ease-in-out;
-  -moz-transition: .25s ease-in-out;
-  -o-transition: .25s ease-in-out;
-  transition: .25s ease-in-out;
+#nav-icon1 span {
+    display: block;
+    position: absolute;
+    height: 9px;
+    width: 100%;
+    background: $teal;
+    border-radius: 9px;
+    opacity: 1;
+    left: 0;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: .25s ease-in-out;
+    -moz-transition: .25s ease-in-out;
+    -o-transition: .25s ease-in-out;
+    transition: .25s ease-in-out;
 }
 
 #nav-icon1 span:nth-child(1) {
-  top: 0px;
+    top: 0px;
 }
 
 #nav-icon1 span:nth-child(2) {
-  top: 18px;
+    top: 18px;
 }
 
 #nav-icon1 span:nth-child(3) {
-  top: 36px;
+    top: 36px;
 }
 
 #nav-icon1.open span:nth-child(1) {
-  top: 18px;
-  -webkit-transform: rotate(135deg);
-  -moz-transform: rotate(135deg);
-  -o-transform: rotate(135deg);
-  transform: rotate(135deg);
+    top: 18px;
+    -webkit-transform: rotate(135deg);
+    -moz-transform: rotate(135deg);
+    -o-transform: rotate(135deg);
+    transform: rotate(135deg);
 }
 
 #nav-icon1.open span:nth-child(2) {
-  opacity: 0;
-  left: -60px;
+    opacity: 0;
+    left: -60px;
 }
 
 #nav-icon1.open span:nth-child(3) {
-  top: 18px;
-  -webkit-transform: rotate(-135deg);
-  -moz-transform: rotate(-135deg);
-  -o-transform: rotate(-135deg);
-  transform: rotate(-135deg);
+    top: 18px;
+    -webkit-transform: rotate(-135deg);
+    -moz-transform: rotate(-135deg);
+    -o-transform: rotate(-135deg);
+    transform: rotate(-135deg);
 }
 
 
@@ -539,7 +536,7 @@ div.menu-btn {
 
 .acct-btn {
     @extend .btn;
-   font-size: 2em;
+    font-size: 2em;
 }
 
 
@@ -548,7 +545,6 @@ div.menu-btn {
 // .CodeMirror {
 //     font-family: serif;
 // }
-
 // .ReactCodeMirror {
 //     border: 1px solid #eee;
 //     height: auto;
@@ -558,18 +554,16 @@ div.menu-btn {
 //         text-align: left;
 //     }
 // }
-@media screen and (max-width: 795px){
+@media screen and (max-width: 795px) {
     .btn {
         max-width: 50%;
         transition-duration: 0.4s;
-
     }
     form {
         button {
             width: 40%;
         }
     }
-
     .main-slogan {
         width: 80%;
     }
